introduce ingress customization fields
