# pkg/components/controllers.go
@@ -3,6 +3,7 @@ package components
 import (
 	"context"
 	"os"
+	"strings"
 
 	"github.com/openshift/microshift/pkg/assets"
 	"github.com/openshift/microshift/pkg/config"
@@ -185,12 +186,41 @@ func startIngressController(ctx context.Context, cfg *config.Config, kubeconfigP
 		}
 	}
 
-	extraParams := assets.RenderParams{
-		"RouterNamespaceOwnership": cfg.Ingress.AdmissionPolicy.NamespaceOwnership == config.NamespaceOwnershipAllowed,
-		"RouterHttpPort":           *cfg.Ingress.Ports.Http,
-		"RouterHttpsPort":          *cfg.Ingress.Ports.Https,
-		"RouterMode":               routerMode,
+	routerEnableCompression := "false"
+	routerCompressionMime := ""
+	if len(cfg.Ingress.HTTPCompressionPolicy.MimeTypes) > 0 {
+		routerEnableCompression = "true"
+		routerCompressionMime = strings.Join(cfg.GetMIMETypes(cfg.Ingress.HTTPCompressionPolicy.MimeTypes), " ")
+		//operatorv1.Ingress.
+		//GetMIMETypes()
+
 	}
+	//Ingress.HTTPCompressionPolicy
+	//&c
+
+	extraParams := assets.RenderParams{
+		"RouterNamespaceOwnership":    cfg.Ingress.AdmissionPolicy.NamespaceOwnership == config.NamespaceOwnershipAllowed,
+		"RouterHttpPort":              *cfg.Ingress.Ports.Http,
+		"RouterHttpsPort":             *cfg.Ingress.Ports.Https,
+		"RouterMode":                  routerMode,
+		"RouterBufSize":               &cfg.Ingress.TuningOptions.HeaderBufferBytes,
+		"HeaderBufferMaxRewriteBytes": &cfg.Ingress.TuningOptions.HeaderBufferMaxRewriteBytes,
+		"HealthCheckInterval":         &cfg.Ingress.TuningOptions.HealthCheckInterval.Duration,
+		"ClientTimeout":               &cfg.Ingress.TuningOptions.ClientTimeout.Duration,
+		"ClientFinTimeout":            &cfg.Ingress.TuningOptions.ClientFinTimeout.Duration,
+		"ServerTimeout":               &cfg.Ingress.TuningOptions.ServerTimeout.Duration,
+		"ServerFinTimeout":            &cfg.Ingress.TuningOptions.ServerFinTimeout.Duration,
+		"TunnelTimeout":               &cfg.Ingress.TuningOptions.TunnelTimeout.Duration,
+		"TlsInspectDelay":             &cfg.Ingress.TuningOptions.TLSInspectDelay.Duration,
+		"ThreadCount":                 &cfg.Ingress.TuningOptions.ThreadCount,
+		"MaxConnections":              &cfg.Ingress.TuningOptions.MaxConnections,
+		"LogEmptyRequests":            &cfg.Ingress.LogEmptyRequests,
+		"ForwardedHeaderPolicy":       &cfg.Ingress.ForwardedHeaderPolicy,
+		"HTTPEmptyRequestsPolicy":     &cfg.Ingress.HTTPEmptyRequestsPolicy,
+		"RouterEnableCompression":     routerEnableCompression,
+		"RouterCompressionMime":       routerCompressionMime,
+	}
+
 	if err := assets.ApplyServices(ctx, svc, renderTemplate, renderParamsFromConfig(cfg, extraParams), kubeconfigPath); err != nil {
 		klog.Warningf("Failed to apply service %v %v", svc, err)
 		return err
